<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jflame</groupId>
	<artifactId>devAide</artifactId>
	<version>1.0.0</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<jfoenix.version>9.0.9</jfoenix.version>
		<!-- <contolsfx.version>8.40.16</contolsfx.version> -->
		<contolsfx.version>11.0.2</contolsfx.version>
		<jflame.version>2.1.0-beta</jflame.version>
		<jfx.version>12</jfx.version>
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.25</slf4j.version>
		<qrcode.version>3.4.0</qrcode.version>
		<fastjson.version>1.2.70</fastjson.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>4.13.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${jfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${jfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${jfx.version}</version>
		</dependency>
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>${jfoenix.version}</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>${contolsfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jflame</groupId>
			<artifactId>jflame-commons</artifactId>
			<version>${jflame.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>${qrcode.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>${qrcode.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>${fastjson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.cronutils</groupId>
			<artifactId>cron-utils</artifactId>
			<version>9.1.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.3</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<configuration>
							<options>
								<option>-agentlib:jdwp=transport=dt_socket,server=n,suspend=y,address=localhost:8000</option>
								<option>-Djava.library.path=c:\tmp</option>
								<option>--add-opens</option>
								<option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
								
								<option>--add-opens</option>
								<option>javafx.graphics/javafx.scene=com.jfoenix</option>
								
								<option>--add-exports</option>
								<option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
							</options>
							<mainClass>org.jflame.devAide.App</mainClass>
							<executable>D:/Java/jdk-11.0.3/bin/java</executable>
						</configuration>
					</execution>
					<execution>
						<id>debug</id>
						<configuration>
							<options>
								<option>-agentlib:jdwp=transport=dt_socket,server=n,suspend=y,address=localhost:8000</option>
								<option>-Djava.library.path=c:\tmp</option>
								<option>--add-opens</option>
								<option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
								
								<option>--add-opens</option>
								<option>javafx.graphics/javafx.scene=com.jfoenix</option>
								
								<option>--add-exports</option>
								<option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
							</options>
							<mainClass>org.jflame.devAide.App</mainClass>
							<executable>D:/Java/jdk-11.0.3/bin/java</executable>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<name>devAide</name>
	<description>开发辅助工具盒</description>
</project>